Data files are now printed prettily instead of on one long line.

--- a/data/maps/map002.mkd
+++ b/data/maps/map002.mkd
@@ -1,1 +1,223 @@
-{":type":":map",":data":{"^c":"MKD::Map","@id":2,"@dev_name":"Top Right Map","@display_name":"Top Right Map","@width":5,"@height":5,"@tiles":[[[0,137],[0,137],[0,137],[0,137],[0,137],[0,137],[0,137],[0,137],[0,137],[0,137],[0,137],[0,137],[0,137],[0,137],[0,137],[0,137],[0,137],[0,137],[0,137],[0,137],[0,137],[0,137],[0,137],[0,137],[0,137]]],"@tilesets":[1],"@events":{}}}
+{
+  ":type": ":map",
+  ":data": {
+    "^c": "MKD::Map",
+    "@id": 2,
+    "@dev_name": "Top Right Map",
+    "@display_name": "Top Right Map",
+    "@width": 5,
+    "@height": 5,
+    "@tiles": [
+      [
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ]
+      ],
+      [
+        [
+          0,
+          12
+        ],
+        [
+          0,
+          12
+        ],
+        [
+          0,
+          12
+        ],
+        [
+          0,
+          12
+        ],
+        [
+          0,
+          12
+        ],
+        [
+          0,
+          12
+        ],
+        [
+          0,
+          12
+        ],
+        [
+          0,
+          12
+        ],
+        [
+          0,
+          12
+        ],
+        [
+          0,
+          12
+        ],
+        [
+          0,
+          12
+        ],
+        [
+          0,
+          12
+        ],
+        [
+          0,
+          12
+        ],
+        [
+          0,
+          12
+        ],
+        [
+          0,
+          12
+        ],
+        [
+          0,
+          12
+        ],
+        [
+          0,
+          12
+        ],
+        [
+          0,
+          12
+        ],
+        [
+          0,
+          12
+        ],
+        [
+          0,
+          12
+        ],
+        [
+          0,
+          12
+        ],
+        [
+          0,
+          12
+        ],
+        [
+          0,
+          12
+        ],
+        [
+          0,
+          12
+        ],
+        [
+          0,
+          12
+        ]
+      ]
+    ],
+    "@tilesets": [
+      1,
+      5
+    ],
+    "@events": {
+    }
+  }
+}
