--- a/data/maps/map005.mkd
+++ b/data/maps/map005.mkd
@@ -1,1 +1,2224 @@
-{":type":":map",":data":{"^c":"MKD::Map","@id":5,"@dev_name":"Faraday Island","@display_name":"Faraday Island","@width":29,"@height":31,"@tiles":[[null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,null,null,null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],[0,0],[0,0],[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,null,null,null,null,null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,null,null,null,null,null,null,null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,null,null,null,null,null,null,null,null,null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,null,null,null,null,null,null,null,null,null,null,null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,null,null,null,null,null,null,null,null,null,null,null,null,null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,[0,0],null,[0,0],null,[0,0],null,[0,0],null,[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],null,[0,0],null,[0,0],null,[0,0],null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,[0,0],null,[0,0],null,[0,0],null,[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],null,[0,0],null,[0,0],null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,[0,0],null,[0,0],null,[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],null,[0,0],null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,[0,0],null,[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null]],"@tilesets":[1],"@events":{}}}
+{
+  ":type": ":map",
+  ":data": {
+    "^c": "MKD::Map",
+    "@id": 5,
+    "@dev_name": "Faraday Island",
+    "@display_name": "Faraday Island",
+    "@width": 29,
+    "@height": 31,
+    "@tiles": [
+      [
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        null,
+        null,
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        [
+          0,
+          0
+        ],
+        null,
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        [
+          0,
+          0
+        ],
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null
+      ]
+    ],
+    "@tilesets": [
+      1
+    ],
+    "@events": {
+    }
+  }
+}
