--- a/data/maps/map004.mkd
+++ b/data/maps/map004.mkd
@@ -1,1 +1,120 @@
-{":type":":map",":data":{"^c":"MKD::Map","@id":4,"@dev_name":"Bottom Right Map","@display_name":"Bottom Right Map","@width":5,"@height":5,"@tiles":[[[0,185],[0,185],[0,185],[0,185],[0,185],[0,185],[0,185],[0,185],[0,185],[0,185],[0,185],[0,185],[0,185],[0,185],[0,185],[0,185],[0,185],[0,185],[0,185],[0,185],[0,185],[0,185],[0,185],[0,185],[0,185]]],"@tilesets":[1],"@events":{}}}
+{
+  ":type": ":map",
+  ":data": {
+    "^c": "MKD::Map",
+    "@id": 4,
+    "@dev_name": "Bottom Right Map",
+    "@display_name": "Bottom Right Map",
+    "@width": 5,
+    "@height": 5,
+    "@tiles": [
+      [
+        [
+          0,
+          185
+        ],
+        [
+          0,
+          185
+        ],
+        [
+          0,
+          185
+        ],
+        [
+          0,
+          185
+        ],
+        [
+          0,
+          185
+        ],
+        [
+          0,
+          185
+        ],
+        [
+          0,
+          185
+        ],
+        [
+          0,
+          185
+        ],
+        [
+          0,
+          185
+        ],
+        [
+          0,
+          185
+        ],
+        [
+          0,
+          185
+        ],
+        [
+          0,
+          185
+        ],
+        [
+          0,
+          185
+        ],
+        [
+          0,
+          185
+        ],
+        [
+          0,
+          185
+        ],
+        [
+          0,
+          185
+        ],
+        [
+          0,
+          185
+        ],
+        [
+          0,
+          185
+        ],
+        [
+          0,
+          185
+        ],
+        [
+          0,
+          185
+        ],
+        [
+          0,
+          185
+        ],
+        [
+          0,
+          185
+        ],
+        [
+          0,
+          185
+        ],
+        [
+          0,
+          185
+        ],
+        [
+          0,
+          185
+        ]
+      ]
+    ],
+    "@tilesets": [
+      1
+    ],
+    "@events": {
+    }
+  }
+}
