--- a/data/maps/map001.mkd
+++ b/data/maps/map001.mkd
@@ -12,94 +12,72 @@
         [
           1,
           0,
-          42
-        ],
-        [
-          1,
-          1,
-          43
-        ],
-        [
-          1,
-          1,
-          37
-        ],
-        [
-          1,
-          2,
-          42
+          34
         ],
         [
           1,
           0,
-          41
+          36
+        ],
+        null,
+        [
+          1,
+          0,
+          46
         ],
         [
           1,
           0,
-          37
-        ],
-        [
-          1,
-          1,
-          32
-        ],
-        [
-          1,
-          2,
-          44
-        ],
-        [
-          1,
-          1,
-          42
+          40
         ],
         [
           1,
           0,
-          44
+          38
+        ],
+        null,
+        null,
+        null,
+        null,
+        [
+          1,
+          0,
+          34
         ],
         [
           1,
-          1,
-          41
+          0,
+          36
         ],
         [
           1,
+          0,
+          46
+        ],
+        null,
+        [
           1,
-          45
+          0,
+          40
         ],
         [
           1,
-          1,
-          41
-        ],
-        [
-          1,
-          1,
-          45
-        ],
-        [
-          1,
-          3,
-          43
-        ],
-        [
-          1,
-          3,
-          45
+          0,
+          38
         ]
       ]
     ],
     "@tilesets": [
       1,
       3,
-      5
+      5,
+      2,
+      4,
+      6
     ],
     "@autotiles": [
       2,
       1,
-      3,
       4
     ],
     "@events": {
