--- a/data/maps/map003.mkd
+++ b/data/maps/map003.mkd
@@ -1,1 +1,1 @@
-{":type":":map",":data":{"^c":"MKD::Map","@id":3,"@dev_name":"Bottom Left Map","@display_name":"Bottom Left Map","@width":5,"@height":5,"@tiles":[[[0,0,113],[0,0,113],[0,0,113],[0,0,113],[0,0,113],[0,0,113],[0,0,113],[0,0,113],[0,0,113],[0,0,113],[0,0,113],[0,0,113],[0,0,113],[0,0,113],[0,0,113],[0,0,113],[0,0,113],[0,0,113],[0,0,113],[0,0,113],[0,0,113],[0,0,113],[0,0,113],[0,0,113],[0,0,113]]],"@tilesets":[1],"@autotiles":[],"@events":{},"@connections":{":north":[],":east":[],":south":[],":west":[]}}}
+{":type":":map",":data":{"^c":"MKD::Map","@id":3,"@dev_name":"Bottom Left Map","@display_name":"Bottom Left Map","@width":5,"@height":3,"@tiles":[[[0,0,113],[0,0,113],[0,0,113],[0,0,113],[0,0,113],[0,0,113],[0,0,113],[0,0,113],[0,0,113],[0,0,113],[0,0,113],[0,0,113],[0,0,113],[0,0,113],[0,0,113]]],"@tilesets":[1],"@autotiles":[],"@events":{},"@connections":{":north":[],":east":[[0,5],[0,5]],":south":[],":west":[]}}}
