--- a/data/maps/map005.mkd
+++ b/data/maps/map005.mkd
@@ -1,1 +1,11 @@
-{":type":":map",":data":{"^c":"MKD::Map","@id":5,"@dev_name":"Untitled Map","@display_name":"Untitled Map","@width":15,"@height":15,"@tiles":[[[0,0,25],[0,0,24],[0,0,25],[0,0,24],[0,0,25],[0,0,24],[0,0,25],[0,0,24],[0,0,25],[0,0,24],[0,0,25],[0,0,24],[0,0,25],[0,0,24],[0,0,25],[0,0,17],[0,0,16],[0,0,17],[0,0,16],[0,0,17],[0,0,16],[0,0,17],[0,0,16],[0,0,17],[0,0,16],[0,0,17],[0,0,16],[0,0,17],[0,0,16],[0,0,17],[0,0,25],[0,0,24],[0,0,25],[0,0,24],[0,0,25],[0,0,24],[0,0,25],[0,0,24],[0,0,25],[0,0,24],[0,0,25],[0,0,24],[0,0,25],[0,0,24],[0,0,25],[0,0,17],[0,0,16],[0,0,17],[0,0,16],[0,0,17],[0,0,16],[0,0,17],[0,0,16],[0,0,17],[0,0,16],[0,0,17],[0,0,16],[0,0,17],[0,0,16],[0,0,17],[0,0,25],[0,0,24],[0,0,25],[0,0,24],[0,0,25],[0,0,24],[0,0,25],[0,0,24],[0,0,25],[0,0,24],[0,0,25],[0,0,24],[0,0,25],[0,0,24],[0,0,25],[0,0,33],[0,0,32],[0,0,33],[0,0,32],[0,0,33],[0,0,32],[0,0,33],[0,0,32],[0,0,33],[0,0,32],[0,0,33],[0,0,32],[0,0,33],[0,0,32],[0,0,33],[0,2,1],[0,2,1],[0,2,1],[0,2,1],[0,2,1],[0,2,1],[0,2,1],[0,2,1],[0,2,1],[0,2,1],[0,2,1],[0,2,1],[0,2,1],[0,2,1],[0,2,1],[0,2,17],[0,2,17],[0,2,17],[0,2,17],[0,2,17],[0,2,17],[0,2,17],[0,2,17],[0,2,17],[0,2,17],[0,2,17],[0,2,17],[0,2,17],[0,2,17],[0,2,17],[0,0,25],[0,0,24],[0,0,25],[0,0,24],[0,0,25],[0,0,24],[0,0,25],[0,0,24],[0,0,25],[0,0,24],[0,0,25],[0,0,24],[0,0,25],[0,0,24],[0,0,25],[0,0,17],[0,0,16],[0,0,17],[0,0,16],[0,0,17],[0,0,16],[0,0,17],[0,0,16],[0,0,17],[0,0,16],[0,0,17],[0,0,16],[0,0,17],[0,0,16],[0,0,17],[0,0,25],[0,0,24],[0,0,25],[0,0,24],[0,0,25],[0,0,24],[0,0,25],[0,0,24],[0,0,25],[0,0,24],[0,0,25],[0,0,24],[0,0,25],[0,0,24],[0,0,25],[0,0,17],[0,0,16],[0,0,17],[0,0,16],[0,0,17],[0,0,16],[0,0,17],[0,0,16],[0,0,17],[0,0,16],[0,0,17],[0,0,16],[0,0,17],[0,0,16],[0,0,17],[0,0,25],[0,0,24],[0,0,25],[0,0,24],[0,0,25],[0,0,24],[0,0,25],[0,0,24],[0,0,25],[0,0,24],[0,0,25],[0,0,24],[0,0,25],[0,0,24],[0,0,25],[0,0,17],[0,0,16],[0,0,17],[0,0,16],[0,0,17],[0,0,16],[0,0,17],[0,0,16],[0,0,17],[0,0,16],[0,0,17],[0,0,16],[0,0,17],[0,0,16],[0,0,17],[0,0,25],[0,0,24],[0,0,25],[0,0,24],[0,0,25],[0,0,24],[0,0,25],[0,0,24],[0,0,25],[0,0,24],[0,0,25],[0,0,24],[0,0,25],[0,0,24],[0,0,25]],[null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,[0,0,21],[0,0,20],[0,0,21],[0,0,20],[0,0,21],[0,0,20],[0,0,21],[0,0,20],[0,0,21],[0,0,20],[0,0,21],[0,0,20],[0,0,21],[0,0,20],[0,0,21],null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null]],"@tilesets":[1,3,2],"@autotiles":[],"@events":{},"@connections":{":north":[],":east":[],":south":[],":west":[]}}}
+{":type":":map",":data":{"^c":"MKD::Map","@id":5,"@dev_name":"Untitled Map","@display_name":"Untitled Map","@width":15,"@height":44,"@tiles":[[[1,1,34],[1,1,36],[0,2,8],[0,2,9],[0,2,10],[0,0,24],[0,0,25],[0,0,24],[0,0,25],[0,0,24],[0,0,25],[0,0,24],[0,0,25],[0,0,16],[0,0,17],[1,1,16],[1,1,24],[0,2,8],[0,2,9],[0,2,10],[0,0,16],[0,0,17],[0,0,16],[0,0,17],[0,0,32],[0,0,33],[0,0,32],[0,0,33],[0,0,24],[0,0,25],[1,1,16],[1,1,24],[0,2,8],[0,2,9],[0,2,10],[0,0,24],[0,0,25],[0,0,24],[0,0,25],[0,3,36],[0,3,37],[0,3,38],[0,3,39],[0,0,16],[0,0,17],[1,1,16],[1,1,24],[0,2,8],[0,2,9],[0,2,10],[0,0,16],[0,0,17],[0,0,16],[0,0,17],[0,3,44],[0,3,45],[0,3,46],[0,3,47],[0,0,24],[0,0,25],[1,1,16],[1,1,24],[0,2,8],[0,2,9],[0,2,10],[0,0,24],[0,0,25],[0,0,24],[0,0,25],[0,3,52],[0,3,53],[0,3,54],[0,3,55],[0,0,16],[0,0,17],[1,1,40],[1,1,38],[0,2,8],[0,2,9],[0,2,10],[0,0,32],[0,0,33],[0,0,32],[0,0,33],[0,2,0],[0,2,1],[0,2,2],[1,1,46],[0,0,24],[0,0,25],[0,2,1],[0,2,1],[0,2,33],[0,2,9],[0,2,32],[0,2,1],[0,2,1],[0,2,1],[0,2,1],[0,2,33],[0,2,9],[0,2,32],[0,2,2],[0,0,16],[0,0,17],[0,2,17],[0,2,17],[0,2,17],[0,2,17],[0,2,17],[0,2,17],[0,2,17],[0,2,17],[0,2,17],[0,2,17],[0,2,17],[0,2,25],[0,2,10],[0,0,24],[0,0,25],[0,0,25],[0,0,24],[0,0,25],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,2,8],[0,2,10],[0,0,32],[0,0,33],[0,0,17],[0,0,16],[0,0,17],[1,0,34],[1,0,20],[1,0,20],[1,0,20],[1,0,20],[1,0,20],[1,0,36],[0,0,0],[0,2,8],[0,2,32],[0,2,1],[0,2,1],[0,0,25],[0,0,24],[0,0,25],[1,0,16],[1,0,0],[1,0,0],[1,0,0],[1,0,0],[1,0,0],[1,0,24],[0,0,0],[0,2,8],[0,2,9],[0,2,9],[0,2,24],[0,0,17],[0,0,16],[0,0,17],[1,0,16],[1,0,0],[1,0,0],[1,0,0],[1,0,0],[1,0,0],[1,0,24],[0,0,0],[0,2,8],[0,2,24],[0,2,17],[0,2,18],[0,0,25],[0,0,24],[0,0,25],[1,0,16],[1,0,0],[1,0,0],[1,0,0],[1,0,0],[1,0,0],[1,0,24],[0,0,0],[0,2,8],[0,2,10],[0,0,24],[0,0,25],[0,0,17],[0,0,16],[0,0,17],[1,0,16],[1,0,0],[1,0,0],[1,0,0],[1,0,0],[1,0,0],[1,0,24],[0,0,0],[0,2,8],[0,2,10],[0,0,16],[0,0,17],[0,0,25],[0,0,24],[0,0,25],[1,0,16],[1,0,0],[1,0,0],[1,0,0],[1,0,0],[1,0,0],[1,0,24],[0,0,0],[0,2,8],[0,2,10],[0,0,24],[0,0,25],[0,0,17],[0,0,16],[0,0,17],[1,0,16],[1,0,0],[1,0,0],[1,0,0],[1,0,0],[1,0,0],[1,0,24],[0,0,0],[0,2,8],[0,2,10],[0,0,16],[0,0,17],[0,0,25],[0,0,24],[0,0,25],[1,0,16],[1,0,0],[1,0,0],[1,0,0],[1,0,0],[1,0,0],[1,0,24],[0,0,0],[0,2,8],[0,2,10],[0,0,24],[0,0,25],[0,0,17],[0,0,16],[0,0,17],[1,0,16],[1,0,0],[1,0,0],[1,0,0],[1,0,0],[1,0,0],[1,0,24],[0,0,0],[0,2,8],[0,2,10],[0,0,16],[0,0,17],[0,0,25],[0,0,24],[0,0,25],[1,0,16],[1,0,0],[1,0,0],[1,0,0],[1,0,0],[1,0,0],[1,0,24],[0,0,0],[0,2,8],[0,2,10],[0,0,24],[0,0,25],[0,0,17],[0,0,16],[0,0,17],[1,0,16],[1,0,0],[1,0,0],[1,0,0],[1,0,0],[1,0,0],[1,0,24],[0,0,0],[0,2,8],[0,2,10],[0,0,16],[0,0,17],[0,0,25],[0,0,24],[0,0,25],[1,0,16],[1,0,0],[1,0,0],[1,0,0],[1,0,0],[1,0,0],[1,0,24],[0,0,0],[0,2,8],[0,2,10],[0,0,24],[0,0,25],[0,0,17],[0,0,16],[0,0,17],[1,0,16],[1,0,0],[1,0,0],[1,0,0],[1,0,0],[1,0,0],[1,0,24],[0,0,0],[0,2,8],[0,2,10],[0,0,16],[0,0,17],[0,0,25],[0,0,24],[0,0,25],[1,0,16],[1,0,0],[1,0,0],[1,0,0],[1,0,0],[1,0,0],[1,0,24],[0,0,0],[0,2,8],[0,2,10],[0,0,24],[0,0,25],[0,0,17],[0,0,16],[0,0,17],[1,0,16],[1,0,0],[1,0,0],[1,0,0],[1,0,0],[1,0,0],[1,0,24],[0,0,0],[0,2,8],[0,2,10],[0,0,16],[0,0,17],[0,0,25],[0,0,24],[0,0,25],[1,0,16],[1,0,0],[1,0,0],[1,0,0],[1,0,0],[1,0,0],[1,0,24],[0,0,0],[0,2,8],[0,2,10],[0,0,24],[0,0,25],[0,0,17],[0,0,16],[0,0,17],[1,0,16],[1,0,0],[1,0,0],[1,0,0],[1,0,0],[1,0,0],[1,0,24],[0,0,0],[0,2,8],[0,2,10],[0,0,16],[0,0,17],[0,0,25],[0,0,24],[0,0,25],[1,0,16],[1,0,0],[1,0,0],[1,0,0],[1,0,0],[1,0,0],[1,0,24],[0,0,0],[0,2,8],[0,2,10],[0,0,24],[0,0,25],[0,0,17],[0,0,16],[0,0,17],[1,0,16],[1,0,0],[1,0,0],[1,0,0],[1,0,0],[1,0,0],[1,0,24],[0,0,0],[0,2,8],[0,2,10],[0,0,16],[0,0,17],[0,0,25],[0,0,24],[0,0,25],[1,0,16],[1,0,0],[1,0,0],[1,0,0],[1,0,0],[1,0,0],[1,0,24],[0,0,0],[0,2,8],[0,2,10],[0,0,24],[0,0,25],[0,0,17],[0,0,16],[0,0,17],[1,0,16],[1,0,0],[1,0,0],[1,0,0],[1,0,0],[1,0,0],[1,0,24],[0,0,0],[0,2,8],[0,2,10],[0,0,16],[0,0,17],[0,0,25],[0,0,24],[0,0,25],[1,0,16],[1,0,0],[1,0,0],[1,0,0],[1,0,0],[1,0,0],[1,0,24],[0,0,0],[0,2,8],[0,2,10],[0,0,24],[0,0,25],[0,0,17],[0,0,16],[0,0,17],[1,0,16],[1,0,0],[1,0,0],[1,0,0],[1,0,0],[1,0,0],[1,0,24],[0,0,0],[0,2,8],[0,2,10],[0,0,16],[0,0,17],[0,0,25],[0,0,24],[0,0,25],[1,0,16],[1,0,0],[1,0,0],[1,0,0],[1,0,0],[1,0,0],[1,0,24],[0,0,0],[0,2,8],[0,2,10],[0,0,24],[0,0,25],[0,0,17],[0,0,16],[0,0,17],[1,0,16],[1,0,0],[1,0,0],[1,0,0],[1,0,0],[1,0,0],[1,0,24],[0,0,0],[0,2,8],[0,2,10],[0,0,16],[0,0,17],[0,0,25],[0,0,24],[0,0,25],[1,0,16],[1,0,0],[1,0,0],[1,0,0],[1,0,0],[1,0,0],[1,0,24],[0,0,0],[0,2,8],[0,2,10],[0,0,24],[0,0,25],[0,0,17],[0,0,16],[0,0,17],[1,0,16],[1,0,0],[1,0,0],[1,0,0],[1,0,0],[1,0,0],[1,0,24],[0,0,0],[0,2,8],[0,2,10],[0,0,16],[0,0,17],[0,0,25],[0,0,24],[0,0,25],[1,0,16],[1,0,0],[1,0,0],[1,0,0],[1,0,0],[1,0,0],[1,0,24],[0,0,0],[0,2,8],[0,2,10],[0,0,24],[0,0,25],[0,0,17],[0,0,16],[0,0,17],[1,0,16],[1,0,0],[1,0,0],[1,0,0],[1,0,0],[1,0,0],[1,0,24],[0,0,0],[0,2,8],[0,2,10],[0,0,16],[0,0,17],[0,0,25],[0,0,24],[0,0,25],[1,0,16],[1,0,0],[1,0,0],[1,0,0],[1,0,0],[1,0,0],[1,0,24],[0,0,0],[0,2,8],[0,2,10],[0,0,24],[0,0,25],[0,0,17],[0,0,16],[0,0,17],[1,0,16],[1,0,0],[1,0,0],[1,0,0],[1,0,0],[1,0,0],[1,0,24],[0,0,0],[0,2,8],[0,2,10],[0,0,16],[0,0,17],[0,0,25],[0,0,24],[0,0,25],[1,0,16],[1,0,0],[1,0,0],[1,0,0],[1,0,0],[1,0,0],[1,0,24],[0,0,0],[0,2,8],[0,2,10],[0,0,24],[0,0,25],[0,0,17],[0,0,16],[0,0,17],[1,0,16],[1,0,0],[1,0,0],[1,0,0],[1,0,0],[1,0,0],[1,0,24],[0,0,0],[0,2,8],[0,2,10],[0,0,16],[0,0,17],[0,0,25],[0,0,24],[0,0,25],[1,0,16],[1,0,0],[1,0,0],[1,0,0],[1,0,0],[1,0,0],[1,0,24],[0,0,0],[0,2,8],[0,2,10],[0,0,24],[0,0,25],[0,0,17],[0,0,16],[0,0,17],[1,0,16],[1,0,0],[1,0,0],[1,0,0],[1,0,0],[1,0,0],[1,0,24],[0,0,0],[0,2,8],[0,2,10],[0,0,16],[0,0,17]],[null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,[0,3,28],[0,3,29],[0,3,30],[0,3,31],null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,[0,0,21],[0,0,20],[0,0,21],null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,[0,4,24],[0,4,25],[0,4,25],[0,4,25],[0,4,25],[0,4,25],[0,4,25],[0,4,7],null,null,null,null,null,null,null,null,null,null,null,null,null,null,[0,4,8],null,null,null,null,null,null,null,null,null,null,null,null,null,null,[0,4,8],null,null,null,null,null,null,null,null,null,null,null,null,null,null,[0,4,8],null,null,[0,0,20],[0,0,21],null,null,null,null,null,null,null,null,null,null,[0,4,8],null,null,null,null,null,null,null,null,null,null,null,null,null,null,[0,4,8],null,null,null,null,null,null,null,null,null,null,null,null,null,null,[0,4,8],null,null,null,null,null,null,null,null,null,null,null,null,null,null,[0,4,8],null,null,null,null,null,null,null,null,null,null,null,null,null,null,[0,4,8],null,null,null,null,null,null,null,null,null,null,null,null,null,null,[0,4,8],null,null,null,null,null,null,null,null,null,null,null,null,null,null,[0,4,8],null,null,null,null,null,null,null,null,null,null,null,null,null,null,[0,4,8],null,null,null,null,null,null,null,null,null,null,null,null,null,null,[0,4,8],null,null,null,null,null,null,null,null,null,null,null,null,null,null,[0,4,8],null,null,null,null,null,null,null,null,null,null,null,null,null,null,[0,4,8],null,null,null,null,null,null,null,null,null,null,null,null,null,null,[0,4,8],null,null,null,null,null,null,null,null,null,null,null,null,null,null,[0,4,8],null,null,null,null,null,null,null,null,null,null,null,null,null,null,[0,4,8],null,null,null,null,null,null,null,null,null,null,null,null,null,null,[0,4,8],null,null,null,null,null,null,null,null,null,null,null,null,null,null,[0,4,8],null,null,null,null,null,null,null,null,null,null,null,null,null,null,[0,4,8],null,null,null,null,null,null,null,null,null,null,null,null,null,null,[0,4,8],null,null,null,null,null,null,null,null,null,null,null,null,null,null,[0,4,8],null,null,null,null,null,null,null,null,null,null,null,null,null,null,[0,4,8],null,null,null,null,null,null,null,null,null,null,null,null,null,null,[0,4,8],null,null,null,null,null,null,null,null,null,null,null,null,null,null,[0,4,8],null,null,null,null,null,null,null,null,null,null,null,null,null,null,[0,4,8],null,null,null,null,null,null,null,null,null,null,null,null,null,null,[0,4,8],null,null,null,null,null,null,null,null,null,null,null,null,null,null,[0,4,8],null,null,null,null,null,null,null,null,null,null,null,null,null,null,[0,4,8],null,null,null,null,null,null,null,null,null,null,null,null,null,null,[0,4,8],null,null,null,null,null,null,null,null,null,null,null,null,null,null,[0,4,8],null,null,null,null,null,null,null,null,null,null,null,null,null,null,[0,4,8],null,null,null,null,null,null,null,null,null,null,null,null,null,null,[0,4,8],null,null,null,null,null,null,null,null,null,null,null,null,null,null,[0,4,8],null,null,null,null,null,null,null,null,null,null,null,null,null,null,[0,4,16],null,null,null,null]],"@tilesets":[1,3,2,7,6],"@autotiles":[2,3],"@events":{},
+"@connections":
+[
+{
+  "^c": "MKD::MapConnection",
+  "@map_id": 6,
+  "@relative_x": 15,
+  "@relative_y": 0
+}
+]
+}}
