--- a/data/maps/map001.mkd
+++ b/data/maps/map001.mkd
@@ -1,328 +1,1 @@
-{
-  ":type": ":map",
-  ":data": {
-    "^c": "MKD::Map",
-    "@id": 1,
-    "@dev_name": "Top Left Map",
-    "@display_name": "Top Left Map",
-    "@width": 4,
-    "@height": 4,
-    "@tiles": [
-      [
-        [
-          1,
-          0,
-          34
-        ],
-        [
-          1,
-          0,
-          36
-        ],
-        null,
-        [
-          1,
-          0,
-          46
-        ],
-        [
-          1,
-          0,
-          40
-        ],
-        [
-          1,
-          0,
-          38
-        ],
-        null,
-        null,
-        null,
-        null,
-        [
-          1,
-          0,
-          34
-        ],
-        [
-          1,
-          0,
-          36
-        ],
-        [
-          1,
-          0,
-          46
-        ],
-        null,
-        [
-          1,
-          0,
-          40
-        ],
-        [
-          1,
-          0,
-          38
-        ]
-      ]
-    ],
-    "@tilesets": [
-      1,
-      3,
-      5,
-      2,
-      4,
-      6
-    ],
-    "@autotiles": [
-      2,
-      1,
-      4
-    ],
-    "@events": {
-    },
-    "@connections": {
-      ":north": [
-
-      ],
-      ":east": [
-
-      ],
-      ":south": [
-
-      ],
-      ":west": [
-
-      ]
-    },
-    "@encounter_tables": [
-      {
-        "^c": "EncounterTable",
-        "@density": 0.25,
-        "@battle_music": "",
-        "@battle_background": "",
-        "@battle_base": "",
-        "@list": [
-          [
-            5,
-            {
-              ":species": ":BULBASAUR",
-              ":level": 1
-            }
-          ],
-          [
-            4,
-            {
-              ":species": ":BULBASAUR",
-              ":level": 2
-            }
-          ],
-          [
-            3,
-            {
-              ":species": ":BULBASAUR",
-              ":level": 3
-            }
-          ],
-          [
-            2,
-            {
-              ":species": ":BULBASAUR",
-              ":level": 4
-            }
-          ],
-          [
-            1,
-            {
-              ":species": ":BULBASAUR",
-              ":level": 5
-            }
-          ]
-        ],
-        "@tiles": [
-          [
-            0,
-            6
-          ],
-          [
-            0,
-            7
-          ],
-          [
-            1,
-            7
-          ],
-          [
-            0,
-            8
-          ],
-          [
-            1,
-            8
-          ],
-          [
-            2,
-            8
-          ],
-          [
-            0,
-            9
-          ],
-          [
-            1,
-            9
-          ],
-          [
-            2,
-            9
-          ],
-          [
-            3,
-            9
-          ],
-          [
-            0,
-            10
-          ],
-          [
-            1,
-            10
-          ],
-          [
-            2,
-            10
-          ],
-          [
-            3,
-            10
-          ],
-          [
-            4,
-            10
-          ],
-          [
-            5,
-            10
-          ],
-          [
-            0,
-            11
-          ],
-          [
-            1,
-            11
-          ],
-          [
-            2,
-            11
-          ],
-          [
-            3,
-            11
-          ],
-          [
-            4,
-            11
-          ],
-          [
-            5,
-            11
-          ],
-          [
-            0,
-            12
-          ],
-          [
-            1,
-            12
-          ],
-          [
-            2,
-            12
-          ],
-          [
-            3,
-            12
-          ],
-          [
-            4,
-            12
-          ],
-          [
-            5,
-            12
-          ],
-          [
-            6,
-            12
-          ],
-          [
-            0,
-            13
-          ],
-          [
-            1,
-            13
-          ],
-          [
-            2,
-            13
-          ],
-          [
-            3,
-            13
-          ],
-          [
-            4,
-            13
-          ],
-          [
-            5,
-            13
-          ],
-          [
-            6,
-            13
-          ],
-          [
-            7,
-            13
-          ],
-          [
-            0,
-            14
-          ],
-          [
-            1,
-            14
-          ],
-          [
-            2,
-            14
-          ],
-          [
-            3,
-            14
-          ],
-          [
-            4,
-            14
-          ],
-          [
-            5,
-            14
-          ],
-          [
-            6,
-            14
-          ],
-          [
-            7,
-            14
-          ]
-        ]
-      }
-    ]
-  }
-}
+{":type":":map",":data":{"^c":"MKD::Map","@id":1,"@dev_name":"Grass Map","@display_name":"Grass Map","@width":15,"@height":15,"@tiles":[[[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0]]],"@tilesets":[1],"@autotiles":[],"@events":{},"@connections":[]}}
