--- a/data/maps/map003.mkd
+++ b/data/maps/map003.mkd
@@ -1,1 +1,1 @@
-{":type":":map",":data":{"^c":"MKD::Map","@id":3,"@dev_name":"B","@display_name":"BB","@width":15,"@height":15,"@tiles":[[null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null]],"@tilesets":[1],"@autotiles":[],"@events":{},"@connections":[]}}
+{":type":":map",":data":{"^c":"MKD::Map","@id":3,"@dev_name":"B","@display_name":"BB","@width":15,"@height":15,"@tiles":[[[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9],[0,0,9]]],"@tilesets":[1],"@autotiles":[],"@events":{},"@connections":[{"^c":"MKD::MapConnection","@map_id":2,"@relative_x":-15,"@relative_y":0}]}}
